Trying simple CNN

--- a/ModelNotebook.ipynb
+++ b/ModelNotebook.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cfu288/.local/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Hypothesis: smaller kernel sizes will lead to higher accuracies of classification in fined-tuned image classification\n",
+    "# We think this is likely due to the ability of the CNN to detect smaller features between relatively similar images of the same species\n",
+    "# Independent Variables: kernel size\n",
+    "# Constant Variables: number of layers, types of layers, input shape, epoches, hyperparamaters(depth,padding)\n",
+    "# Dependent Variables: Accuracy\n",
+    "# Limitations: we are foregoing pure accuracy for experimental reasons - we could get higher accuracy if we tried but we're keeping\n",
+    "# things constant for consistancy between models\n",
+    "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dense and Dropout if we have time\n",
+    "# Reference to www.cs231n.github.io/convolutional-networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 3. Import libraries and modules\n",
     "import os, cv2, argparse\n",
@@ -57,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "READING IN AND FORMATTING IMAGES\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup, Read in images, Preprocess images for training\n",
     "TRAIN_IMG, TRAIN_CLS, TEST_IMG, TEST_CLS = ([] for i in range(4))\n",
@@ -84,9 +99,24 @@
     "        if img is not None:\n",
     "            img = cv2.resize(img, (100, 100))\n",
     "            TEST_IMG.append(img)\n",
-    "            TEST_CLS.append(x)\n",
-    "\n",
-    "\n",
+    "            TEST_CLS.append(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print some of the input for display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# convert to numpy arrays\n",
     "TRAIN_IMG = np.array(TRAIN_IMG)\n",
     "TEST_IMG = np.array(TEST_IMG)\n",
@@ -139,6 +169,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Why CNN over NN?\n",
+    "    Regular FC NN don't scale well to images - too many weights and too connected - leads to over fitting and long\n",
+    "    compute times\n",
+    "    Instead of connecting densely like a NN, a CNN layer only connects the neurons in a layer to a small region of \n",
+    "    the layer before it. Also allows for reducing the image to a single vector in the end.\n",
+    "'''\n",
+    "\n",
+    "''' What is a Convolutional layer?\n",
+    "    A convolutional layer is a 3D layer (vs a 1D layer in a dense) where the depth of the layer is the number of\n",
+    "    learnable filters. A filter is a set of weights inna 3d matrix that transveres over the input image. Each filter \n",
+    "    is small spatially (width and height wise), but extend the depth of the input (so 3 for our case). A typical \n",
+    "    filter may be [5x5x3] - 5 pixels wide and high, 3 deep. During the forward pass, we slide(convolve) each filter \n",
+    "    across the width and height of the input and compute dot products between the filter and the input.\n",
+    "'''\n",
+    "\n",
+    "''' What do these filters do?\n",
+    "    As we slide these filters across the input image, we build a 2d activation map that gives the responses of that\n",
+    "    specific filter at each point in the image. What this means is that the filters scan the input for \"features\" \n",
+    "    like edges or areas of high contrast, and the filter will be \"activated\" when it passes its \"feature\" on the \n",
+    "    input image. We can see where in the image a feature was found by seeing where on the the 2d activation \n",
+    "    map is activated for the filter that is detecting that feature. Convolutional layers deeper in the \n",
+    "    architecture might be able to detect more complex attributes in the image like patterns, small objects(eyes, \n",
+    "    wheels), etc.\n",
+    "'''\n",
+    "\n",
+    "''' How big is the volume of a Convolutional layer (Height,Width,Depth) given:\n",
+    "    INPUT_SIZE(W), FILTER_SIZE(F), NUM_OF_FILTERS, STRIDE(S), PADDING(P)\n",
+    "      Padding - It is a HYPERPARAMATER. Pad the input volume with zeros around the border. Generally used to control the\n",
+    "        spacial size of the output volumes, usually to match size size of the input volume.\n",
+    "      Stride - amount of pixels we shift each filter by when scanning. Stride of 1 means we move filters one pixel \n",
+    "        at a time. Larger strides lead to a smaller output volume in the layer\n",
+    "      Depth - It is a HYPERPARAMATER. It corresponds to the number of filters we want to use. Each filter looks for \n",
+    "        something different in input. \n",
+    "    Volume = (W−F+2P)/S+1 \n",
+    "    Our CNN has an input of 100x100, filter of 3x3, no padding, stride of 1, 110 number of filters. \n",
+    "    (100-3) + 1 = 98, so the output layer contains 98x98x110 neurons.\n",
+    "'''\n",
+    "\n",
+    "''' What does this mean for our Convolutional layer?\n",
+    "    Each neuron from the [98x98x110] output volume is attached to a [3x3x3] filter in the input volume.\n",
+    "    All the neurons in the same area in the depth column (so 110 of them) actually map to the exact same\n",
+    "    filter on the input, but each should have different numerical outputs since each filter is looking for a \n",
+    "    different feature\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Alternate Model - Simple\n",
     "\n",
     "# Trying to use the simplest CNN possible - From here we can mess with the kernel and see if kernel size helps \n",
@@ -149,19 +231,25 @@
     "# Dependent Variables: Accuracy\n",
     "# Limitations: we are foregoing pure accuracy for experimental reasons - we could get higher accuracy if we tried but we're keeping\n",
     "# things constant for consistancy between models\n",
-    "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dense and Dropout if we have time\n",
+    "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dropout(overfitting) if we have time\n",
     "# Reference to www.cs231n.github.io/convolutional-networks\n",
     "test_kernel = (3,3)\n",
     "simple_model = Sequential()\n",
-    "# INPUT LAYER\n",
-    "# CONVOLUTIONAL LAYER\n",
-    "# RELU LAYER\n",
-    "model.add(Conv2D(110, test_kernel, activation='relu', input_shape=(100,100,3)))\n",
-    "# POOL LAYER\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Flatten()) # Conerts the convolutional layer into a 1D feature vector to be used for final classification\n",
-    "# FULLY CONNECTED LAYER\n",
-    "model.add(Dense(10, activation='softmax'))"
+    "# INPUT LAYER - Hold raw pixel values of an image, width 100, height 100, and with 3 color channels\n",
+    "# CONVOLUTIONAL LAYER - Compute the output of neurons connected to local regions in the input, each computing the dot \n",
+    "#   product vetween their weights and a small region (decided by filter) they are connected to in the input volume\n",
+    "#   The output of a convolution layer is computed as the following:\n",
+    "#     the depth (No of feature maps) is equal to the number of filters applied in this layer\n",
+    "#     the width ( the same for height) is computed according to the following equation\n",
+    "#     W=(W−F+2P)/S+1 where f is the receptive field (filter width), p is the padding and s is the stride. for more details see the examples in the following link\n",
+    "simple_model.add(Conv2D(110, test_kernel, input_shape=(100,100,3)))\n",
+    "# RELU LAYER - Apply an elemntwize activation function, max(0,x). Leaves the size of the volume unchanged.\n",
+    "simple_model.add(Activation='relu')\n",
+    "# POOL LAYER - Perform a downsampling operation along the psatial dimentions (width, height) resulting in a smaller volume\n",
+    "simple_model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "simple_model.add(Flatten()) # Connects the convolutional layer into a 1D feature vector to be used for final classification\n",
+    "# FULLY CONNECTED LAYER - Compute class scores, resulting in a volume size of [1x1x10], where each of the 10 numbers represents a class\n",
+    "simple_model.add(Dense(10, activation='softmax'))"
    ]
   },
   {
