--- a/ModelNotebook-CFCopy.ipynb
+++ b/ModelNotebook-CFCopy.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,15 +164,15 @@
     "\n",
     "# This model was used in a tutorial for MINST images, but gets a 50% on our test set\n",
     "# after 10 epoches\n",
-    "model = Sequential()\n",
-    "model.add(Conv2D(110, (3, 3), activation='relu', input_shape=(100, 100, 3)))\n",
-    "model.add(Conv2D(110, (3, 3), activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "model.add(Dropout(0.25))\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(128, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(10, activation='softmax'))"
+    "# model = Sequential()\n",
+    "# model.add(Conv2D(110, (3, 3), activation='relu', input_shape=(100, 100, 3)))\n",
+    "# model.add(Conv2D(110, (3, 3), activation='relu'))\n",
+    "# model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "# model.add(Dropout(0.25))\n",
+    "# model.add(Flatten())\n",
+    "# model.add(Dense(128, activation='relu'))\n",
+    "# model.add(Dropout(0.5))\n",
+    "# model.add(Dense(10, activation='softmax'))"
    ]
   },
   {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +248,16 @@
     "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dropout(overfitting) if we have time\n",
     "# Reference to www.cs231n.github.io/convolutional-networks\n",
     "# Building a CNN generally requires 4 major steps: Convolution, Pooling, Flattening, Full Connection\n",
-    "test_kernel = (3,3)\n",
+    "test_kernel = (2,2)\n",
+    "num_filters = 110\n",
+    "input_shape=(150,150,3)\n",
     "\n",
     "simple_model = Sequential()\n",
     "# INPUT LAYER - Hold raw pixel values of an image, width 100, height 100, and with 3 color channels\n",
     "# CONVOLUTIONAL LAYER - Compute the output of neurons connected to local regions in the input, each computing the dot \n",
     "#   product vetween their weights and a small region (decided by filter) they are connected to in the input volume\n",
-    "simple_model.add(Conv2D(110, test_kernel, input_shape=(100,100,3)))\n",
-    "# RELU LAYER - Apply an elemntwise activation function, max(0,x). Leaves the size of the volume unchanged. Can be added a paramater to the previous layer but seperated for clarity\n",
+    "simple_model.add(Conv2D(num_filters, test_kernel, input_shape=input_shape))\n",
+    "# RELU LAYER - Apply an elemntwise activation function, max(0,x). Leaves the size of the volume unchanged, used to normalize output. Can be added a paramater to the previous layer but seperated for clarity\n",
     "simple_model.add(Activation('relu'))\n",
     "# POOL LAYER - Perform a downsampling operation along the psatial dimentions (width, height) resulting in a smaller volume\n",
     "simple_model.add(MaxPooling2D(pool_size=(2,2)))\n",
@@ -266,19 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile MINIST model\n",
-    "print(\"COMPILING MINIST MODEL\")\n",
-    "# Adam - Modified Gradient Decent - learning rate changes as it nears\n",
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "# print(\"COMPILING MINIST MODEL\")\n",
+    "# # Adam - Modified Gradient Decent - learning rate changes as it nears\n",
+    "# model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -300,70 +302,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the model on the training data\n",
-    "print(\"TRAINING FOR {} EPOCHS\".format(EPOCHS)) \n",
-    "history = model.fit(TRAIN_IMG, TRAIN_CLS, batch_size=32, epochs=EPOCHS, verbose=1, validation_split=0.2, shuffle=True)"
+    "# print(\"TRAINING FOR {} EPOCHS\".format(EPOCHS)) \n",
+    "# history = model.fit(TRAIN_IMG, TRAIN_CLS, batch_size=32, epochs=EPOCHS, verbose=1, validation_split=0.2, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAINING SIMPLE MODEL FOR 10 EPOCHS\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
       "Train on 878 samples, validate on 220 samples\n",
       "Epoch 1/10\n",
-      "878/878 [==============================] - 18s 21ms/step - loss: 3.3189 - acc: 0.2175 - val_loss: 1.8799 - val_acc: 0.3773\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 8.3159 - acc: 0.1686 - val_loss: 2.2148 - val_acc: 0.2409\n",
       "Epoch 2/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 1.2015 - acc: 0.6401 - val_loss: 1.3112 - val_acc: 0.5818\n",
+      "878/878 [==============================] - 22s 26ms/step - loss: 1.8357 - acc: 0.3964 - val_loss: 1.5513 - val_acc: 0.4500\n",
       "Epoch 3/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.5035 - acc: 0.8850 - val_loss: 1.1715 - val_acc: 0.5909\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.9719 - acc: 0.6913 - val_loss: 1.2878 - val_acc: 0.5545\n",
       "Epoch 4/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.1886 - acc: 0.9727 - val_loss: 1.2012 - val_acc: 0.6045\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.4339 - acc: 0.8952 - val_loss: 1.2848 - val_acc: 0.5727\n",
       "Epoch 5/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.0814 - acc: 0.9909 - val_loss: 1.0882 - val_acc: 0.6364\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.1924 - acc: 0.9692 - val_loss: 1.2109 - val_acc: 0.6045\n",
       "Epoch 6/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.0380 - acc: 0.9977 - val_loss: 1.0331 - val_acc: 0.6409\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.0849 - acc: 0.9920 - val_loss: 1.2398 - val_acc: 0.6091\n",
       "Epoch 7/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.0164 - acc: 1.0000 - val_loss: 1.0850 - val_acc: 0.6364\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.0354 - acc: 1.0000 - val_loss: 1.2289 - val_acc: 0.6045\n",
       "Epoch 8/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.0094 - acc: 1.0000 - val_loss: 1.1020 - val_acc: 0.6591\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.0236 - acc: 1.0000 - val_loss: 1.3009 - val_acc: 0.6091\n",
       "Epoch 9/10\n",
-      "878/878 [==============================] - 16s 19ms/step - loss: 0.0066 - acc: 1.0000 - val_loss: 1.0799 - val_acc: 0.6500\n",
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.0126 - acc: 1.0000 - val_loss: 1.3360 - val_acc: 0.6091\n",
       "Epoch 10/10\n",
-      "878/878 [==============================] - 17s 19ms/step - loss: 0.0052 - acc: 1.0000 - val_loss: 1.1044 - val_acc: 0.6727\n"
+      "878/878 [==============================] - 23s 26ms/step - loss: 0.0090 - acc: 1.0000 - val_loss: 1.2790 - val_acc: 0.6136\n"
      ]
     }
    ],
    "source": [
     "# Train SIMPLE model on the training data\n",
+    "# Note: Probably overfitting this model, hit 100% on training before 10 iterations\n",
     "print(\"TRAINING SIMPLE MODEL FOR {} EPOCHS using {} kernel size\".format(EPOCHS, test_kernel)) \n",
     "history = simple_model.fit(TRAIN_IMG, TRAIN_CLS, batch_size=32, epochs=EPOCHS, verbose=1, validation_split=0.2, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the model\n",
-    "print(\"SAVE MODEL\")\n",
-    "model.save('test_model.h5')\n",
-    "print(history.history.keys())"
+    "# print(\"SAVE MODEL\")\n",
+    "# model.save('test_model.h5')\n",
+    "# print(history.history.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,40 +375,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "#model = load_model('test_model.h5')\n",
     "\n",
     "# Evaluate the model on the validation data\n",
-    "loss, acc = model.evaluate(TEST_IMG, TEST_CLS, verbose=1)\n",
-    "print(\"Loss: \", loss, \" Accuracy: \", acc)"
+    "# loss, acc = model.evaluate(TEST_IMG, TEST_CLS, verbose=1)\n",
+    "# print(\"Loss: \", loss, \" Accuracy: \", acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SAVE SIMPLE MODEL\n",
       "dict_keys(['val_loss', 'val_acc', 'loss', 'acc'])\n",
-      "272/272 [==============================] - 1s 3ms/step\n",
-      "Loss:  1.2422967938815845  Accuracy:  0.6213235294117647\n"
+      "272/272 [==============================] - 1s 4ms/step\n",
+      "Loss:  1.2035731007071102  Accuracy:  0.6323529411764706\n"
      ]
     }
    ],
    "source": [
     "# Save and Evaluate the SIMPLE model on the validation data\n",
-    "print(\"SAVE SIMPLE MODEL\")\n",
-    "simple_model.save('models/simple_model.h5')\n",
+    "#print(\"SAVE SIMPLE MODEL\")\n",
+    "#simple_model.save('models/simple_model.h5')\n",
     "print(history.history.keys())\n",
     "loss, acc = simple_model.evaluate(TEST_IMG, TEST_CLS, verbose=1)\n",
     "print(\"Loss: \", loss, \" Accuracy: \", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Append results to the end of a text file\n",
+    "with open(\"results_simple_cnn.txt\", 'a') as f:\n",
+    "    f.write(\"{{ 'accuracy':{}, 'epochs':{}, 'kernel':{}, 'num_filters':{}, 'input_shape':'{}' }} \\n\".format(\n",
+    "        acc, EPOCHS, test_kernel, num_filters, input_shape))"
    ]
   },
   {
