--- a/ModelNotebook-CFCopy.ipynb
+++ b/ModelNotebook-CFCopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,13 +102,13 @@
     "    for file in os.listdir(train_dir):\n",
     "        img = cv2.imread(train_dir + file)\n",
     "        if img is not None:\n",
-    "            img = cv2.resize(img, (100, 100))\n",
+    "            img = cv2.resize(img, (150, 150))\n",
     "            TRAIN_IMG.append(img)\n",
     "            TRAIN_CLS.append(x)\n",
     "    for file in os.listdir(test_dir):\n",
     "        img = cv2.imread(test_dir + file)\n",
     "        if img is not None:\n",
-    "            img = cv2.resize(img, (100, 100))\n",
+    "            img = cv2.resize(img, (150, 150))\n",
     "            TEST_IMG.append(img)\n",
     "            TEST_CLS.append(x)\n",
     "print(\"COMPLETE\")"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
     "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dropout(overfitting) if we have time\n",
     "# Reference to www.cs231n.github.io/convolutional-networks\n",
     "# Building a CNN generally requires 4 major steps: Convolution, Pooling, Flattening, Full Connection\n",
-    "test_kernel = (2,2)\n",
+    "test_kernel = (3,3)\n",
     "num_filters = 110\n",
     "input_shape=(150,150,3)\n",
     "\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,35 +313,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (3, 3) kernel size\n",
       "Train on 878 samples, validate on 220 samples\n",
       "Epoch 1/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 8.3159 - acc: 0.1686 - val_loss: 2.2148 - val_acc: 0.2409\n",
+      "878/878 [==============================] - 37s 43ms/step - loss: 11.4830 - acc: 0.1355 - val_loss: 2.9296 - val_acc: 0.2864\n",
       "Epoch 2/10\n",
-      "878/878 [==============================] - 22s 26ms/step - loss: 1.8357 - acc: 0.3964 - val_loss: 1.5513 - val_acc: 0.4500\n",
+      "878/878 [==============================] - 37s 42ms/step - loss: 2.1136 - acc: 0.3132 - val_loss: 1.7216 - val_acc: 0.4091\n",
       "Epoch 3/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.9719 - acc: 0.6913 - val_loss: 1.2878 - val_acc: 0.5545\n",
+      "878/878 [==============================] - 37s 43ms/step - loss: 0.9489 - acc: 0.7392 - val_loss: 1.2620 - val_acc: 0.5818\n",
       "Epoch 4/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.4339 - acc: 0.8952 - val_loss: 1.2848 - val_acc: 0.5727\n",
+      "878/878 [==============================] - 38s 43ms/step - loss: 0.3402 - acc: 0.9396 - val_loss: 1.2874 - val_acc: 0.6182\n",
       "Epoch 5/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.1924 - acc: 0.9692 - val_loss: 1.2109 - val_acc: 0.6045\n",
+      "878/878 [==============================] - 37s 43ms/step - loss: 0.1262 - acc: 0.9829 - val_loss: 1.1409 - val_acc: 0.6318\n",
       "Epoch 6/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.0849 - acc: 0.9920 - val_loss: 1.2398 - val_acc: 0.6091\n",
+      "878/878 [==============================] - 37s 43ms/step - loss: 0.0464 - acc: 0.9989 - val_loss: 1.2405 - val_acc: 0.6136\n",
       "Epoch 7/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.0354 - acc: 1.0000 - val_loss: 1.2289 - val_acc: 0.6045\n",
+      "878/878 [==============================] - 38s 43ms/step - loss: 0.0198 - acc: 0.9989 - val_loss: 1.1631 - val_acc: 0.6682\n",
       "Epoch 8/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.0236 - acc: 1.0000 - val_loss: 1.3009 - val_acc: 0.6091\n",
+      "878/878 [==============================] - 38s 43ms/step - loss: 0.0091 - acc: 1.0000 - val_loss: 1.1772 - val_acc: 0.6682\n",
       "Epoch 9/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.0126 - acc: 1.0000 - val_loss: 1.3360 - val_acc: 0.6091\n",
+      "878/878 [==============================] - 38s 43ms/step - loss: 0.0062 - acc: 1.0000 - val_loss: 1.1731 - val_acc: 0.6773\n",
       "Epoch 10/10\n",
-      "878/878 [==============================] - 23s 26ms/step - loss: 0.0090 - acc: 1.0000 - val_loss: 1.2790 - val_acc: 0.6136\n"
+      "878/878 [==============================] - 37s 43ms/step - loss: 0.0046 - acc: 1.0000 - val_loss: 1.2230 - val_acc: 0.6773\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +396,8 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['val_loss', 'val_acc', 'loss', 'acc'])\n",
-      "272/272 [==============================] - 1s 4ms/step\n",
-      "Loss:  1.2035731007071102  Accuracy:  0.6323529411764706\n"
+      "272/272 [==============================] - 3s 10ms/step\n",
+      "Loss:  1.2560026715783512  Accuracy:  0.6213235294117647\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +424,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor i in range(len(TEST_IMG)):\\n    img = TEST_IMG[i]\\n    cls = TEST_CLS[i]\\n    img = np.array([img])\\n    prediction = model.predict(img, verbose=1, steps=1)\\n    print\\n    print \"Class: \", cls\\n    print \"Prediction: \", prediction[0]\\n    max_index = np.argmax(prediction[0])\\n    print \"Predicted Class index: \", max_index\\n    print \"Prediction Correct: \", True if cls[max_index] == 1. else False\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Predict images\n",
     "# TODO - Print mispredicted images, the label it predicted, and the correct label\n",
