data, graphs, notebook updates from me and jake

--- a/ModelNotebook-SimpleCNN-CF.ipynb
+++ b/ModelNotebook-SimpleCNN-CF.ipynb
@@ -102,13 +102,13 @@
     "    for file in os.listdir(train_dir):\n",
     "        img = cv2.imread(train_dir + file)\n",
     "        if img is not None:\n",
-    "            img = cv2.resize(img, (150, 150))\n",
+    "            img = cv2.resize(img, (100, 100))\n",
     "            TRAIN_IMG.append(img)\n",
     "            TRAIN_CLS.append(x)\n",
     "    for file in os.listdir(test_dir):\n",
     "        img = cv2.imread(test_dir + file)\n",
     "        if img is not None:\n",
-    "            img = cv2.resize(img, (150, 150))\n",
+    "            img = cv2.resize(img, (100, 100))\n",
     "            TEST_IMG.append(img)\n",
     "            TEST_CLS.append(x)\n",
     "print(\"COMPLETE\")"
@@ -177,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' What does this mean for our Convolutional layer?\\n    Each neuron from the [98x98x110] output volume is attached to a [3x3x3] filter in the input volume.\\n    All the neurons in the same area in the depth column (so 110 of them) actually map to the exact same\\n    filter on the input, but each should have different numerical outputs since each filter is looking for a \\n    different feature.\\n    With [98x98x110] neurons in this Convolutional layer, each neuron with [3x3x3] weighs and 1 bias. This means\\n    that this layer has 29,580,320 paramaters.\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "''' Why CNN over NN?\n",
     "    Regular FC NN don't scale well to images - too many weights and too connected - leads to over fitting and long\n",
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +259,9 @@
     "# Currently only using Input, Convolutional, Relu, Pool, and FC/Dense layers. Can add Dropout(overfitting) if we have time\n",
     "# Reference to www.cs231n.github.io/convolutional-networks\n",
     "# Building a CNN generally requires 4 major steps: Convolution, Pooling, Flattening, Full Connection\n",
-    "test_kernel = (3,3)\n",
+    "test_kernel = (2,2)\n",
     "num_filters = 110\n",
-    "input_shape=(150,150,3)\n",
+    "input_shape=(100,100,3)\n",
     "\n",
     "simple_model = Sequential()\n",
     "# INPUT LAYER - Hold raw pixel values of an image, width 100, height 100, and with 3 color channels\n",
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,35 +324,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (3, 3) kernel size\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
       "Train on 878 samples, validate on 220 samples\n",
       "Epoch 1/10\n",
-      "878/878 [==============================] - 37s 43ms/step - loss: 11.4830 - acc: 0.1355 - val_loss: 2.9296 - val_acc: 0.2864\n",
+      "878/878 [==============================] - 10s 11ms/step - loss: 8.9159 - acc: 0.1959 - val_loss: 4.4462 - val_acc: 0.2591\n",
       "Epoch 2/10\n",
-      "878/878 [==============================] - 37s 42ms/step - loss: 2.1136 - acc: 0.3132 - val_loss: 1.7216 - val_acc: 0.4091\n",
+      "878/878 [==============================] - 12s 14ms/step - loss: 2.0605 - acc: 0.3861 - val_loss: 1.6769 - val_acc: 0.4273\n",
       "Epoch 3/10\n",
-      "878/878 [==============================] - 37s 43ms/step - loss: 0.9489 - acc: 0.7392 - val_loss: 1.2620 - val_acc: 0.5818\n",
+      "878/878 [==============================] - 13s 15ms/step - loss: 0.9968 - acc: 0.7073 - val_loss: 1.3461 - val_acc: 0.5091\n",
       "Epoch 4/10\n",
-      "878/878 [==============================] - 38s 43ms/step - loss: 0.3402 - acc: 0.9396 - val_loss: 1.2874 - val_acc: 0.6182\n",
+      "878/878 [==============================] - 14s 16ms/step - loss: 0.4539 - acc: 0.8838 - val_loss: 1.2647 - val_acc: 0.5682\n",
       "Epoch 5/10\n",
-      "878/878 [==============================] - 37s 43ms/step - loss: 0.1262 - acc: 0.9829 - val_loss: 1.1409 - val_acc: 0.6318\n",
+      "878/878 [==============================] - 13s 15ms/step - loss: 0.2001 - acc: 0.9647 - val_loss: 1.2791 - val_acc: 0.5591\n",
       "Epoch 6/10\n",
-      "878/878 [==============================] - 37s 43ms/step - loss: 0.0464 - acc: 0.9989 - val_loss: 1.2405 - val_acc: 0.6136\n",
+      "878/878 [==============================] - 14s 15ms/step - loss: 0.0817 - acc: 0.9920 - val_loss: 1.1532 - val_acc: 0.6136\n",
       "Epoch 7/10\n",
-      "878/878 [==============================] - 38s 43ms/step - loss: 0.0198 - acc: 0.9989 - val_loss: 1.1631 - val_acc: 0.6682\n",
+      "878/878 [==============================] - 13s 14ms/step - loss: 0.0413 - acc: 1.0000 - val_loss: 1.4073 - val_acc: 0.5773\n",
       "Epoch 8/10\n",
-      "878/878 [==============================] - 38s 43ms/step - loss: 0.0091 - acc: 1.0000 - val_loss: 1.1772 - val_acc: 0.6682\n",
+      "878/878 [==============================] - 10s 11ms/step - loss: 0.0224 - acc: 1.0000 - val_loss: 1.2501 - val_acc: 0.5955\n",
       "Epoch 9/10\n",
-      "878/878 [==============================] - 38s 43ms/step - loss: 0.0062 - acc: 1.0000 - val_loss: 1.1731 - val_acc: 0.6773\n",
+      "878/878 [==============================] - 11s 12ms/step - loss: 0.0138 - acc: 1.0000 - val_loss: 1.2698 - val_acc: 0.5955\n",
       "Epoch 10/10\n",
-      "878/878 [==============================] - 37s 43ms/step - loss: 0.0046 - acc: 1.0000 - val_loss: 1.2230 - val_acc: 0.6773\n"
+      "878/878 [==============================] - 9s 11ms/step - loss: 0.0097 - acc: 1.0000 - val_loss: 1.3146 - val_acc: 0.6000\n"
      ]
     }
    ],
@@ -354,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +407,8 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['val_loss', 'val_acc', 'loss', 'acc'])\n",
-      "272/272 [==============================] - 3s 10ms/step\n",
-      "Loss:  1.2560026715783512  Accuracy:  0.6213235294117647\n"
+      "272/272 [==============================] - 1s 3ms/step\n",
+      "Loss:  1.1741403691908892  Accuracy:  0.6213235294117647\n"
      ]
     }
    ],
@@ -412,19 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Append results to the end of a text file\n",
-    "with open(\"results_simple_cnn.txt\", 'a') as f:\n",
-    "    f.write(\"{{ 'accuracy':{}, 'epochs':{}, 'kernel':{}, 'num_filters':{}, 'input_shape':'{}' }} \\n\".format(\n",
-    "        acc, EPOCHS, test_kernel, num_filters, input_shape))"
+    "# # Append results to the end of a text file\n",
+    "# with open(\"results_simple_cnn.txt\", 'a') as f:\n",
+    "#     f.write('{{ \"accuracy\":{}, \"epochs\":{}, \"kernel\":\"{}\", \"num_filters\":{}, \"input_shape\":\"{}\" }} \\n'.format(\n",
+    "#         acc, EPOCHS, test_kernel, num_filters, input_shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +444,7 @@
        "'\\nfor i in range(len(TEST_IMG)):\\n    img = TEST_IMG[i]\\n    cls = TEST_CLS[i]\\n    img = np.array([img])\\n    prediction = model.predict(img, verbose=1, steps=1)\\n    print\\n    print \"Class: \", cls\\n    print \"Prediction: \", prediction[0]\\n    max_index = np.argmax(prediction[0])\\n    print \"Predicted Class index: \", max_index\\n    print \"Prediction Correct: \", True if cls[max_index] == 1. else False\\n'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
