--- a/BatchRunSimpleCNN.ipynb
+++ b/BatchRunSimpleCNN.ipynb
@@ -74,9 +74,9 @@
     "TEST_DIR = './validation/'\n",
     "EPOCHS = 10\n",
     "kernels = [(1,1),(2,2),(3,3),(4,4),(5,5),(6,6),(7,7)]\n",
-    "num_filters = 160\n",
-    "input_shape=(150,150,3)\n",
-    "input_shape1=(150,150)\n",
+    "num_filters = 210\n",
+    "input_shape=(200,200,3)\n",
+    "input_shape1=(200,200)\n",
     "run_times = 4"
    ]
   },
@@ -169,22 +169,76 @@
       "running0\n",
       "COMPILING SIMPLE MODEL\n",
       "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (1, 1) kernel size\n",
-      "272/272 [==============================] - 2s 8ms/step\n",
-      "Loss:  14.458879470825195  Accuracy:  0.10294117647058823\n",
+      "272/272 [==============================] - 4s 16ms/step\n",
+      "Loss:  14.458879414726706  Accuracy:  0.10294117647058823\n",
       "COMPILING SIMPLE MODEL\n",
       "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
-      "272/272 [==============================] - 2s 8ms/step\n",
-      "Loss:  1.287239018608542  Accuracy:  0.6213235294117647\n",
+      "272/272 [==============================] - 5s 18ms/step\n",
+      "Loss:  14.518137539134306  Accuracy:  0.09926470588235294\n",
       "COMPILING SIMPLE MODEL\n",
       "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (3, 3) kernel size\n",
-      "272/272 [==============================] - 3s 9ms/step\n",
-      "Loss:  14.458879358628216  Accuracy:  0.10294117647058823\n",
+      "272/272 [==============================] - 5s 20ms/step\n",
+      "Loss:  1.3930527041940128  Accuracy:  0.6066176470588235\n",
       "COMPILING SIMPLE MODEL\n",
       "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (4, 4) kernel size\n",
-      "272/272 [==============================] - 3s 10ms/step\n",
-      "Loss:  1.3315640056834501  Accuracy:  0.6397058823529411\n",
+      "272/272 [==============================] - 6s 22ms/step\n",
+      "Loss:  1.3333811900194954  Accuracy:  0.6433823529411765\n",
       "COMPILING SIMPLE MODEL\n",
-      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (5, 5) kernel size\n"
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (5, 5) kernel size\n",
+      "272/272 [==============================] - 7s 27ms/step\n",
+      "Loss:  14.458879302529727  Accuracy:  0.10294117647058823\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (6, 6) kernel size\n",
+      "272/272 [==============================] - 8s 31ms/step\n",
+      "Loss:  1.6661015117869657  Accuracy:  0.5514705882352942\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (7, 7) kernel size\n",
+      "272/272 [==============================] - 10s 37ms/step\n",
+      "Loss:  14.458879695219153  Accuracy:  0.10294117647058823\n",
+      "running1\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (1, 1) kernel size\n",
+      "272/272 [==============================] - 4s 16ms/step\n",
+      "Loss:  14.458879302529727  Accuracy:  0.10294117647058823\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
+      "272/272 [==============================] - 5s 17ms/step\n",
+      "Loss:  1.4148241912617403  Accuracy:  0.6507352941176471\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (3, 3) kernel size\n",
+      "272/272 [==============================] - 5s 19ms/step\n",
+      "Loss:  14.518137539134306  Accuracy:  0.09926470588235294\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (4, 4) kernel size\n",
+      "272/272 [==============================] - 6s 21ms/step\n",
+      "Loss:  1.3846075114081888  Accuracy:  0.5919117647058824\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (5, 5) kernel size\n",
+      "272/272 [==============================] - 7s 26ms/step\n",
+      "Loss:  14.518137539134306  Accuracy:  0.09926470588235294\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (6, 6) kernel size\n",
+      "272/272 [==============================] - 8s 31ms/step\n",
+      "Loss:  14.518137314740349  Accuracy:  0.09926470588235294\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (7, 7) kernel size\n",
+      "272/272 [==============================] - 10s 37ms/step\n",
+      "Loss:  14.3403642317828  Accuracy:  0.11029411764705882\n",
+      "running2\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (1, 1) kernel size\n",
+      "272/272 [==============================] - 4s 15ms/step\n",
+      "Loss:  14.458879302529727  Accuracy:  0.10294117647058823\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (2, 2) kernel size\n",
+      "272/272 [==============================] - 5s 17ms/step\n",
+      "Loss:  14.3403642317828  Accuracy:  0.11029411764705882\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (3, 3) kernel size\n",
+      "272/272 [==============================] - 5s 20ms/step\n",
+      "Loss:  14.458879695219153  Accuracy:  0.10294117647058823\n",
+      "COMPILING SIMPLE MODEL\n",
+      "TRAINING SIMPLE MODEL FOR 10 EPOCHS using (4, 4) kernel size\n"
      ]
     }
    ],
