--- a/ModelNotebook-DualWithDropoutCNN-CF.ipynb
+++ b/ModelNotebook-DualWithDropoutCNN-CF.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -257,9 +257,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 99, 99, 50)        650       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 99, 99, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 99, 99, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 97, 97, 50)        22550     \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 97, 97, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 97, 97, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 48, 48, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 115200)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1152010   \n",
+      "=================================================================\n",
+      "Total params: 1,175,210\n",
+      "Trainable params: 1,175,210\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Alternate Model - Simple\n",
     "\n",
@@ -297,7 +329,8 @@
     "simple_model.add(MaxPooling2D(pool_size=(2,2)))\n",
     "simple_model.add(Flatten()) # Converts and connects multi-dimentional convolutional layer into a 1D feature vector to be used for final classification\n",
     "# FULLY CONNECTED LAYER - Compute class scores, resulting in a volume size of [1x1x10], where each of the 10 numbers represents a class\n",
-    "simple_model.add(Dense(10, activation='softmax'))"
+    "simple_model.add(Dense(10, activation='softmax'))\n",
+    "simple_model.summary()"
    ]
   },
   {
