--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -211,7 +211,7 @@
     "\n",
     "graphs, etc.\n",
     "\n",
-    "NOTE: Images below are outdated, updated images in images folder\n",
+    "#### NOTE: Images below are outdated, updated images in images folder\n",
     "\n",
     "![EffectofFilterSize.png](attachment:EffectofFilterSize.png)\n",
     "![EffectofNumberofFilters.png](attachment:EffectofNumberofFilters.png)\n",
@@ -287,6 +287,13 @@
     "\n",
     "#### Results\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
